@@ -1,29 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmemcached/libmemcached-0.16.ebuild,v 1.2 2008/03/27 22:43:57 caleb Exp $
-
-EAPI="prefix"
-
-DESCRIPTION="a C client library to the memcached server"
-HOMEPAGE="http://tangent.org/552/libmemcached.html"
-SRC_URI="http://download.tangent.org/${P}.tar.gz"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~amd64-linux ~ia64-linux ~mips-linux ~x86-linux ~ppc-macos ~x86-macos"
-IUSE=""
-
-RDEPEND=""
-DEPEND="dev-lang/perl"
-
-RESTRICT="test"
-
-src_unpack() {
-	unpack ${A}
-	sed -i -e "s:-O3:${CFLAGS}:" "${S}"/configure
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed."
-	dodoc AUTHORS ChangeLog NEWS README THANKS TODO
-}
